@@ -6,7 +6,7 @@ tlst-toggle-gui=View tasks
 tlst-new-task-on-confirm=Open new task window on confirm
 
 [gui]
-tlst-add-subtask=Add subtask
+tlst-add-subtask= +  Subtask
 tlst-add-to-top=Add to the top
 tlst-assignee=Assignee
 tlst-description=Description
