@@ -2,6 +2,8 @@
 Version: 0.3.2
 Date: ????
   Changes:
+    - Increased GUI spacing to improve visiblity
+    - Made add subtask button easier to click
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.1
 Date: 2022-02-03
